feat: enhance SearchController with location-based search, result limiting, and favorites functionality